--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,29 +14,30 @@
     "@react-navigation/native-stack": "^7.0.0",
     "@tanstack/react-query": "^5.45.0",
     "axios": "^1.7.4",
-    "expo": "~51.0.1",
-    "expo-constants": "~16.0.1",
-    "expo-crypto": "~13.0.1",
-    "expo-network": "~6.0.1",
-    "expo-secure-store": "~13.0.1",
-    "expo-sqlite": "^14.0.2",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "^2.16.2",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^4.6.0",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
+    "expo-network": "~8.0.7",
+    "expo-secure-store": "~15.0.7",
+    "expo-sqlite": "~16.0.9",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
-    "@types/react": "18.2.74",
-    "@types/react-native": "0.72.8",
+    "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.9.2"
   }
 }
