Milestone 2-1 backend - auth , middlevare, roles add

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["ES2021"],
     "module": "ESNext",
     "moduleResolution": "Node",
+    "types": ["node", "vitest/globals"],
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
