Milestone 2-2 frontend screens and integrate backend

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -13,6 +13,6 @@
     "outDir": "dist",
     "rootDir": "."
   },
-  "include": ["src", "api"],
+  "include": ["src", "api", "scripts"],
   "exclude": ["node_modules", "dist"]
 }
