--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/server.js",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "test": "cross-env NODE_ENV=test PORT=0 DATABASE_URL=\"postgresql://localhost:5432/helpdesk_test\" JWT_ACCESS_SECRET=\"test-access-secret\" JWT_REFRESH_SECRET=\"test-refresh-secret\" vitest run",
+    "seed:admin": "tsx scripts/seedAdmin.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
   },
