--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -37,7 +37,9 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.34.1",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.47.0"
   }
 }
