--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,6 +17,7 @@
     "expo": "~54.0.0",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
+    "expo-document-picker": "~14.0.7",
     "expo-network": "~8.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-sqlite": "~16.0.9",
