--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "jsx": "react-native",
     "strict": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
@@ -22,6 +22,9 @@
       ],
       "@/store/*": [
         "store/*"
+      ],
+      "@/constants/*": [
+        "constants/*"
       ],
       "@/providers/*": [
         "providers/*"
