feat: implement real-time ticket updates with Socket.IO and email notifications
- Added Socket.IO server to backend for real-time ticket updates.
- Integrated Resend API for sending email notifications on ticket events.
- Updated ticket service to publish events for ticket creation, updates, and activity.
- Enhanced ticket service tests to verify email dispatch on ticket events.
- Implemented socket client in mobile app to listen for ticket updates and invalidate caches.
- Documented real-time features and usage in backend documentation.

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -29,11 +29,17 @@
       "@/providers/*": [
         "providers/*"
       ],
+      "@/realtime/*": [
+        "realtime/*"
+      ],
       "@/storage/*": [
         "storage/*"
       ],
       "@/services/*": [
         "services/*"
+      ],
+      "@/lib/*": [
+        "lib/*"
       ],
       "@/config/*": [
         "config/*"
