--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -30,6 +30,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
+    "resend": "^6.5.2",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
