--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
+    "test": "npm run lint"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.0",
