rewrite socket notification logiv and emitting, used notification store this time and write unit test for 'NotificationStore' as well using 'vitest'

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -17,6 +17,9 @@
       "@/screens/*": [
         "screens/*"
       ],
+      "@/components/*": [
+        "components/*"
+      ],
       "@/theme/*": [
         "theme/*"
       ],
@@ -37,6 +40,9 @@
       ],
       "@/services/*": [
         "services/*"
+      ],
+      "@/utils/*": [
+        "utils/*"
       ],
       "@/lib/*": [
         "lib/*"
