--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
-    "test": "npm run lint"
+    "test:unit": "vitest run",
+    "test": "npm run lint && npm run test:unit"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.0",
@@ -42,7 +43,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.34.1",
+    "jsdom": "^27.2.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.47.0"
+    "typescript-eslint": "^8.47.0",
+    "vitest": "^1.6.0"
   }
 }
