--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-document-picker": "~14.0.7",
+    "expo-local-authentication": "^17.0.7",
     "expo-network": "~8.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-sqlite": "~16.0.9",
