--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "prisma generate && prisma migrate deploy && npm run build",
   "functions": {
     "api/index.ts": {
       "runtime": "nodejs20.x"
