--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -3,7 +3,7 @@
   "buildCommand": "prisma generate && prisma migrate deploy && npm run build",
   "functions": {
     "api/index.ts": {
-      "runtime": "nodejs20.x"
+      "runtime": "@vercel/node"
     }
   },
   "routes": [
