--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "@vercel/node"
+      "runtime": "vercel-node@3"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
+    { "src": "/(.*)", "dest": "/dist/api/index.js" }
   ]
 }
