--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,16 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "prisma migrate deploy && tsc -p tsconfig.json",
     "start": "node dist/server.js",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "test": "cross-env NODE_ENV=test PORT=0 DATABASE_URL=\"postgresql://localhost:5432/helpdesk_test\" JWT_ACCESS_SECRET=\"test-access-secret\" JWT_REFRESH_SECRET=\"test-refresh-secret\" vitest run",
     "seed:admin": "tsx scripts/seedAdmin.ts",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate"
   },
   "engines": {
-    "node": ">=18.18.0"
+    "node": ">=20.19.0"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
