--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,7 +15,7 @@
     "postinstall": "prisma generate"
   },
   "engines": {
-    "node": ">=20.19.0"
+    "node": ">=20.x"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
