--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,8 +11,7 @@
     "test": "cross-env NODE_ENV=test PORT=0 DATABASE_URL=\"postgresql://localhost:5432/helpdesk_test\" JWT_ACCESS_SECRET=\"test-access-secret\" JWT_REFRESH_SECRET=\"test-refresh-secret\" vitest run",
     "seed:admin": "tsx scripts/seedAdmin.ts",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "postinstall": "prisma generate" 
+    "prisma:migrate": "prisma migrate dev"
   },
   "engines": {
     "node": ">=20.19.0"
