Fix Docker start path and Fly process command to match compiled JS path

--- a/apps/backend/fly.toml
+++ b/apps/backend/fly.toml
@@ -17,8 +17,8 @@ primary_region = 'iad'
   PORT = '4000'
 
 [processes]
-  app = 'node dist/server.js'
-  release_command = "if [ -n \"\$SHADOW_DATABASE_URL\" ]; then npx prisma migrate deploy --shadow-database-url \"\$SHADOW_DATABASE_URL\"; else npx prisma migrate deploy; fi && npm run seed:admin"
+  app = 'node dist/src/server.js'
+  release_command = 'if [ -n "$SHADOW_DATABASE_URL" ]; then npx prisma migrate deploy --shadow-database-url "$SHADOW_DATABASE_URL"; else npx prisma migrate deploy; fi && npm run seed:admin'
 
 [http_service]
   internal_port = 4000
