--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -35,4 +35,4 @@ EXPOSE 4000
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
   CMD wget --quiet --tries=1 --spider http://localhost:4000/health || exit 1
 
-CMD ["node", "dist/server.js"]
+CMD ["node", "dist/src/server.js"]
