--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -9,6 +9,7 @@ RUN npm ci --silent
 
 # Copy sources
 COPY prisma ./prisma
+COPY prisma.config.ts ./prisma.config.ts
 COPY tsconfig.json ./tsconfig.json
 COPY src ./src
 COPY api ./api
@@ -28,6 +29,7 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/prisma.config.ts ./prisma.config.ts
 
 EXPOSE 4000
 
