--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,8 @@
     "fly:build": "npm ci && npx prisma generate && npm run build",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "test": "cross-env NODE_ENV=test PORT=0 DATABASE_URL=\"postgresql://localhost:5432/helpdesk_test\" JWT_ACCESS_SECRET=\"test-access-secret\" JWT_REFRESH_SECRET=\"test-refresh-secret\" vitest run",
-    "seed:admin": "tsx scripts/seedAdmin.ts",
+    "seed:admin": "node dist/scripts/seedAdmin.js",
+    "ci:test:socket": "npm run build && node dist/src/scripts/ciSocketTest.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy"
@@ -34,6 +35,8 @@
     "pg": "^8.16.3",
     "resend": "^6.5.2",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "axios": "^1.5.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
