--- a/render.yaml
+++ b/render.yaml
@@ -37,7 +37,7 @@ services:
       cd apps/web
       npm install
       npm run build
-    publishPath: apps/web/dist
+    staticPublishPath: apps/web/dist
     autoDeploy: true
     envVars:
       - key: VITE_API_BASE_URL
