--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: helpdesk-backend
     env: node
-    plan: starter
+    plan: free
     buildCommand: |
       cd apps/backend
       npm install
