--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,19 +9,21 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
+    "@tanstack/react-query": "^4.40.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.16.0",
-    "@tanstack/react-query": "^4.40.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/node": "^24.10.1"
+    "@vitejs/plugin-react": "^5.0.1",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.0"
   }
 }
