--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "start": "vite preview",
+    "bs": "vite build && vite preview",
     "test:e2e": "playwright test"
   },
   "dependencies": {
