--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,9 +21,14 @@
     "node": ">=20.19.0"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.1",
+    "@opentelemetry/exporter-otlp-http": "^0.26.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@types/multer": "^2.0.0",
+    "axios": "^1.5.1",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -37,7 +42,6 @@
     "resend": "^6.5.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "axios": "^1.5.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
