--- a/apps/web-new/package.json
+++ b/apps/web-new/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.54.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/sdk-trace-web": "^2.2.0",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "next": "16.0.4",
