--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:reset": "prisma migrate reset"
+    ,"test:reports":"node ./tools/reports-test.js"
   },
   "engines": {
     "node": ">=20.19.0"
