--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -1,1 +1,14 @@
 .vercel
+
+# Backend ignore patterns
+node_modules/
+dist/
+logs/
+*.log
+tmp/
+.env
+.env.*
+*.sqlite
+__tests__/
+.cache/
+.turbo/
